--- a/settings.gradle
+++ b/settings.gradle
@@ -47,6 +47,8 @@ include 'geode-lucene'
 include 'geode-lucene:geode-lucene-test'
 include 'geode-old-client-support'
 include 'geode-wan'
+include 'geode-wan-spi'
+include 'geode-wan-example'
 include 'geode-cq'
 include 'geode-apis-compatible-with-redis'
 include 'geode-memcached'
