Extract ParallelGatewaySender into its own module.

--- a/settings.gradle
+++ b/settings.gradle
@@ -49,6 +49,7 @@ include 'geode-old-client-support'
 include 'geode-wan'
 include 'geode-wan-spi'
 include 'geode-wan-example'
+include 'geode-wan-parallel'
 include 'geode-cq'
 include 'geode-apis-compatible-with-redis'
 include 'geode-memcached'
