--- a/geode-wan/build.gradle
+++ b/geode-wan/build.gradle
@@ -33,6 +33,8 @@ dependencies {
 
   compileOnly('org.apache.logging.log4j:log4j-api')
 
+  runtimeOnly(project(':geode-wan-parallel'))
+
   testImplementation(project(':geode-junit'))
   testImplementation('org.assertj:assertj-core')
   testImplementation('junit:junit')
@@ -46,6 +48,7 @@ dependencies {
   distributedTestImplementation(project(':geode-gfsh'))
   distributedTestImplementation(project(':geode-dunit'))
   distributedTestImplementation(project(':geode-junit'))
+  distributedTestImplementation(project(':geode-wan-parallel'))
 
   distributedTestImplementation('mx4j:mx4j')
   distributedTestImplementation('org.awaitility:awaitility')
