--- a/geode-wan/build.gradle
+++ b/geode-wan/build.gradle
@@ -34,6 +34,7 @@ dependencies {
   compileOnly('org.apache.logging.log4j:log4j-api')
 
   runtimeOnly(project(':geode-wan-parallel'))
+  runtimeOnly(project(':geode-wan-serial'))
 
   testImplementation(project(':geode-junit'))
   testImplementation('org.assertj:assertj-core')
@@ -49,6 +50,7 @@ dependencies {
   distributedTestImplementation(project(':geode-dunit'))
   distributedTestImplementation(project(':geode-junit'))
   distributedTestImplementation(project(':geode-wan-parallel'))
+  distributedTestImplementation(project(':geode-wan-serial'))
 
   distributedTestImplementation('mx4j:mx4j')
   distributedTestImplementation('org.awaitility:awaitility')
