--- a/settings.gradle
+++ b/settings.gradle
@@ -50,6 +50,7 @@ include 'geode-wan'
 include 'geode-wan-spi'
 include 'geode-wan-example'
 include 'geode-wan-parallel'
+include 'geode-wan-serial'
 include 'geode-cq'
 include 'geode-apis-compatible-with-redis'
 include 'geode-memcached'
