--- a/geode-logging/build.gradle
+++ b/geode-logging/build.gradle
@@ -28,6 +28,9 @@ dependencies {
 
     api('org.apache.logging.log4j:log4j-api')
 
+    compileOnly(platform(project(':boms:geode-all-bom')))
+    compileOnly('org.jetbrains:annotations')
+
     testImplementation(project(':geode-junit')) {
         exclude module: 'geode-logging'
     }
