--- a/geode-wan/build.gradle
+++ b/geode-wan/build.gradle
@@ -32,6 +32,7 @@ dependencies {
   implementation('org.apache.commons:commons-lang3')
 
   compileOnly('org.apache.logging.log4j:log4j-api')
+  compileOnly('org.jetbrains:annotations')
 
   runtimeOnly(project(':geode-wan-parallel'))
   runtimeOnly(project(':geode-wan-serial'))
