--- a/settings.gradle
+++ b/settings.gradle
@@ -51,6 +51,7 @@ include 'geode-wan-spi'
 include 'geode-wan-example'
 include 'geode-wan-parallel'
 include 'geode-wan-serial'
+include 'geode-wan-txbatch'
 include 'geode-cq'
 include 'geode-apis-compatible-with-redis'
 include 'geode-memcached'
