--- a/settings.gradle
+++ b/settings.gradle
@@ -48,9 +48,7 @@ include 'geode-lucene:geode-lucene-test'
 include 'geode-old-client-support'
 include 'geode-wan'
 include 'geode-wan-spi'
-include 'geode-wan-example'
-include 'geode-wan-parallel'
-include 'geode-wan-serial'
+include 'geode-wan-default'
 include 'geode-wan-txbatch'
 include 'geode-cq'
 include 'geode-apis-compatible-with-redis'
