Test fixtures refactor. Move TX tests.

--- a/geode-wan-txbatch/build.gradle
+++ b/geode-wan-txbatch/build.gradle
@@ -39,5 +39,5 @@ dependencies {
   testImplementation(project(':geode-wan'))
   testImplementation(project(':geode-logging'))
   testImplementation(project(':geode-serialization'))
-
+  testImplementation(testFixtures(project(':geode-core')))
 }
