--- a/geode-core/build.gradle
+++ b/geode-core/build.gradle
@@ -18,6 +18,7 @@
 apply from: "${rootDir}/${scriptDir}/standard-subproject-configuration.gradle"
 
 apply plugin: 'antlr'
+apply plugin: 'java-test-fixtures'
 
 apply from: "${project.projectDir}/../gradle/publish-java.gradle"
 apply from: "${project.projectDir}/../gradle/pmd.gradle"
@@ -326,6 +327,14 @@ dependencies {
 
 
     jcaImplementation(sourceSets.main.output)
+
+
+    testFixturesImplementation(project(':geode-junit')) {
+        exclude module: 'geode-core'
+    }
+    testFixturesImplementation(project(':geode-serialization'))
+    testFixturesImplementation(project(':geode-logging'))
+
 
     testImplementation(project(':geode-junit')) {
         exclude module: 'geode-core'
