--- a/geode-wan-txbatch/build.gradle
+++ b/geode-wan-txbatch/build.gradle
@@ -40,4 +40,5 @@ dependencies {
   testImplementation(project(':geode-logging'))
   testImplementation(project(':geode-serialization'))
   testImplementation(testFixtures(project(':geode-core')))
+  testImplementation(project(':geode-membership'))
 }
