--- a/geode-core/build.gradle
+++ b/geode-core/build.gradle
@@ -310,7 +310,7 @@ dependencies {
   implementation('com.healthmarketscience.rmiio:rmiio')
 
   // OSHI OS system stats
-  implementation('com.github.oshi:oshi-core:5.7.4')
+  implementation('com.github.oshi:oshi-core')
 
   //Geode-common has annotations and other pieces used geode-core
   api(project(':geode-common'))
