--- a/settings.gradle
+++ b/settings.gradle
@@ -52,6 +52,7 @@ include 'geode-for-redis'
 include 'geode-memcached'
 include 'geode-connectors'
 include 'geode-http-service'
+include 'geode-stats-legacy'
 include 'extensions:geode-modules'
 include 'extensions:geode-modules-test'
 include 'extensions:geode-modules-tomcat7'
