--- a/geode-for-redis/build.gradle
+++ b/geode-for-redis/build.gradle
@@ -134,3 +134,14 @@ tasks.register("redisAPITest") {
     }
   }
 }
+
+ext.moduleName = group + '.redis'
+
+jar {
+  inputs.property("moduleName", moduleName)
+  manifest {
+    attributes(
+        'Automatic-Module-Name': moduleName,
+    )
+  }
+}
