--- a/geode-unsafe/build.gradle
+++ b/geode-unsafe/build.gradle
@@ -50,6 +50,9 @@ ext.moduleName = group + '.unsafe'
 jar {
   inputs.property("moduleName", moduleName)
   manifest {
-    attributes('Automatic-Module-Name': moduleName)
+    attributes(
+        'Automatic-Module-Name': moduleName,
+        'Add-Exports': 'java.management/com.sun.jmx.remote.security'
+    )
   }
 }
