--- a/geode-management/build.gradle
+++ b/geode-management/build.gradle
@@ -54,3 +54,14 @@ dependencies {
   integrationTestImplementation('junit:junit')
   integrationTestImplementation('org.awaitility:awaitility')
 }
+
+ext.moduleName = group + '.management'
+
+jar {
+  inputs.property("moduleName", moduleName)
+  manifest {
+    attributes(
+        'Automatic-Module-Name': moduleName,
+    )
+  }
+}
