--- a/geode-rebalancer/build.gradle
+++ b/geode-rebalancer/build.gradle
@@ -46,3 +46,14 @@ dependencies {
   integrationTestImplementation('org.awaitility:awaitility')
   integrationTestImplementation('org.hamcrest:hamcrest')
 }
+
+ext.moduleName = group + '.rebalancer'
+
+jar {
+  inputs.property("moduleName", moduleName)
+  manifest {
+    attributes(
+        'Automatic-Module-Name': moduleName,
+    )
+  }
+}
