--- a/gradle/java.gradle
+++ b/gradle/java.gradle
@@ -155,12 +155,12 @@ gradle.taskGraph.whenReady({ graph ->
   }
 })
 
-configurations {
-  testOutput {
-    extendsFrom testCompile
-    description 'a dependency that exposes test artifacts'
-  }
-}
+//configurations {
+//  testOutput {
+//    extendsFrom testCompile
+//    description 'a dependency that exposes test artifacts'
+//  }
+//}
 
 // This ensures that javadoc and source jars also have any prefix paths stripped and will
 // be created as libs/foo-sources.jar instead of libs/extensions/foo-sources.jar for example.
@@ -176,9 +176,9 @@ task jarTest(type: Jar, dependsOn: testClasses) {
   classifier 'test'
 }
 
-artifacts {
-  testOutput jarTest
-}
+//artifacts {
+//  testOutput jarTest
+//}
 
 javadoc {
   destinationDir = file("$buildDir/javadoc")
@@ -186,7 +186,7 @@ javadoc {
   options.encoding = 'UTF-8'
   exclude "**/internal/**"
 
-  classpath += configurations.compileOnly
+  classpath += configurations.compileClasspath
 }
 
 
@@ -201,5 +201,5 @@ ext.java17Toolchain = {
 }
 
 java {
-  toolchain(java8Toolchain)
+  toolchain(java17Toolchain)
 }
