--- a/geode-unsafe/build.gradle
+++ b/geode-unsafe/build.gradle
@@ -41,8 +41,8 @@ tasks.withType(JavaCompile).configureEach {
   javaCompiler.set(provider { null } as Provider<? extends JavaCompiler>)
   options.forkOptions.executable = javaToolchains.compilerFor(java17Toolchain).get().executablePath.asFile.absolutePath
   options.compilerArgs << '-XDignore.symbol.file'
-  options.compilerArgs << '--add-exports' << 'java.management/com.sun.jmx.remote.security=geode.geode.unsafe.main'
-  options.compilerArgs << '--add-exports' << 'java.base/sun.nio.ch=geode.geode.unsafe.main'
+  options.compilerArgs << '--add-exports' << 'java.management/com.sun.jmx.remote.security=org.apache.geode.unsafe'
+  options.compilerArgs << '--add-exports' << 'java.base/sun.nio.ch=org.apache.geode.unsafe'
 }
 
 ext.moduleName = group + '.unsafe'
